--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "bird-hotspot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "src/index.html",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
-	"node-fetch": "^2.6.0"
+    "mapbox-gl": "^2.10.0",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.2"
+    "@parcel/transformer-sass": "^2.7.0",
+    "parcel": "^2.7.0"
   },
   "scripts": {
-    "dev": "eleventy --serve",
-    "build": "eleventy",
+    "dev": "parcel",
+    "build": "parcel build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-	"url": "git+https://github.com/photocurio/bird-hotspot.git"
+    "url": "git+https://github.com/photocurio/bird-hotspot.git"
   },
   "keywords": [],
   "author": "",
