--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.1",
     "mapbox-gl": "^2.10.0",
     "node-fetch": "^2.6.0"
   },
