--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.1",
     "mapbox-gl": "^2.10.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "vue": "^3.2.39"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
+    "@parcel/transformer-vue": "^2.7.0",
     "parcel": "^2.7.0"
   },
   "scripts": {
