--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.1",
+    "ioredis": "^5.2.3",
     "mapbox-gl": "^2.10.0",
     "node-fetch": "^2.6.0",
     "vue": "^3.2.39"
