--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.1",
     "ioredis": "^5.2.3",
     "mapbox-gl": "^2.10.0",
     "node-fetch": "^2.6.0",
+    "underscore": "^1.13.6",
     "vue": "^3.2.39"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.1",
     "@parcel/transformer-sass": "^2.7.0",
     "@parcel/transformer-vue": "^2.7.0",
     "parcel": "^2.7.0"
