--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "bird-hotspot",
-  "version": "1.0.0",
-  "description": "",
-  "source": "src/index.html",
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "dependencies": {
-    "ioredis": "^5.2.3",
-    "mapbox-gl": "^2.10.0",
-    "node-fetch": "^2.6.0",
-    "underscore": "^1.13.6",
-    "vue": "^3.2.39"
-  },
-  "devDependencies": {
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.1",
-    "@parcel/transformer-sass": "^2.7.0",
-    "@parcel/transformer-vue": "^2.7.0",
-    "parcel": "^2.7.0"
-  },
-  "scripts": {
-    "dev": "parcel",
-    "build": "parcel build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/photocurio/bird-hotspot.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"name": "bird-hotspot",
+	"version": "1.0.0",
+	"description": "",
+	"source": "src/index.html",
+	"browserslist": "> 0.5%, last 2 versions, not dead",
+	"dependencies": {
+		"@upstash/redis": "^1.13.1",
+		"node-fetch": "^2.6.0",
+		"redis": "^4.3.1"
+	},
+	"devDependencies": {
+		"@parcel/transformer-sass": "^2.7.0",
+		"@parcel/transformer-vue": "^2.7.0",
+		"@popperjs/core": "^2.11.6",
+		"bootstrap": "^5.2.1",
+		"mapbox-gl": "^2.10.0",
+		"parcel": "^2.7.0",
+		"underscore": "^1.13.6",
+		"vue": "^3.2.39"
+	},
+	"scripts": {
+		"dev": "parcel",
+		"build": "parcel build",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/photocurio/bird-hotspot.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC"
 }
