--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 	"browserslist": "> 0.5%, last 2 versions, not dead",
 	"dependencies": {
 		"@upstash/redis": "^1.13.1",
-		"node-fetch": "^2.6.0",
-		"redis": "^4.3.1"
+		"node-fetch": "^2.6.0"
 	},
 	"devDependencies": {
 		"@parcel/transformer-sass": "^2.7.0",
