--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
 	"source": "src/index.html",
 	"browserslist": "> 0.5%, last 2 versions, not dead",
 	"dependencies": {
-		"node-fetch": "^2.6.0"
+		"mapbox-gl": "^2.10.0",
+		"node-fetch": "^2.6.0",
+		"@popperjs/core": "^2.11.6",
+		"bootstrap": "^5.2.1",
+		"underscore": "^1.13.6",
+		"vue": "^3.2.39"
 	},
 	"devDependencies": {
 		"@parcel/transformer-sass": "^2.7.0",
 		"@parcel/transformer-vue": "^2.7.0",
-		"@popperjs/core": "^2.11.6",
-		"bootstrap": "^5.2.1",
-		"mapbox-gl": "^2.10.0",
-		"parcel": "^2.7.0",
-		"underscore": "^1.13.6",
-		"vue": "^3.2.39"
+		"parcel": "^2.7.0"
 	},
 	"scripts": {
 		"dev": "parcel",
