--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
 	"dependencies": {
 		"@popperjs/core": "^2.11.6",
 		"bootstrap": "^5.2.1",
+		"lodash": "^4.17.21",
 		"mapbox-gl": "^2.10.0",
 		"node-fetch": "^2.6.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-map-gl": "^7.0.19",
-		"react-spring": "^9.5.5",
-		"underscore": "^1.13.6"
+		"react-spring": "^9.5.5"
 	},
 	"devDependencies": {
 		"@parcel/transformer-sass": "^2.7.0",
