--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-map-gl": "^7.0.19",
-		"react-spring": "^9.5.5"
+		"react-spring": "^9.5.5",
+		"react-transition-group": "^4.4.5"
 	},
 	"devDependencies": {
 		"@parcel/transformer-sass": "^2.7.0",
