--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"source": "src/index.html",
+	"types": "dist/index.d.ts",
 	"browserslist": "> 0.5%, last 2 versions, not dead",
 	"dependencies": {
 		"@popperjs/core": "^2.11.6",
@@ -17,7 +18,8 @@
 	},
 	"devDependencies": {
 		"@parcel/transformer-sass": "^2.7.0",
-		"@parcel/transformer-vue": "^2.7.0",
+		"@types/react": "^18.0.23",
+		"@types/react-dom": "^18.0.7",
 		"parcel": "^2.7.0",
 		"process": "^0.11.10"
 	},
