--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"devDependencies": {
 		"@parcel/transformer-sass": "^2.7.0",
+		"@types/lodash": "^4.14.186",
 		"@types/react": "^18.0.23",
 		"@types/react-dom": "^18.0.7",
 		"parcel": "^2.7.0",
