--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-map-gl": "^7.0.19",
-		"react-spring": "^9.5.5"
-	},
-	"devDependencies": {
+		"react-spring": "^9.5.5",
 		"@parcel/transformer-sass": "^2.7.0",
 		"@types/lodash": "^4.14.186",
 		"@types/react": "^18.0.23",
