--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	},
 	"scripts": {
 		"dev": "parcel",
-		"build": "parcel build",
+		"build": "parcel build src/index.html",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
