--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
 		"@types/lodash": "^4.14.186",
 		"@types/react": "^18.0.23",
 		"@types/react-dom": "^18.0.7",
-		"parcel": "^2.7.0",
+		"parcel": "^2.8.1",
 		"process": "^0.11.10"
 	},
 	"scripts": {
 		"dev": "parcel",
-		"build": "parcel build src/index.html",
+		"build": "parcel build",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
