--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"devDependencies": {
 		"@parcel/transformer-sass": "^2.8.1",
 		"@types/lodash": "^4.14.186",
+		"@types/node": "^18.11.18",
 		"@types/react": "^18.0.23",
 		"@types/react-dom": "^18.0.7",
 		"parcel": "^2.8.1",
