--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/node": "^18.11.18",
 		"@types/react": "^18.0.23",
 		"@types/react-dom": "^18.0.7",
+		"cypress": "^12.3.0",
 		"parcel": "^2.8.1",
 		"process": "^0.11.10"
 	},
