--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
 		"react-map-gl": "^7.0.19"
 	},
 	"devDependencies": {
+		"@parcel/transformer-html": "^2.8.3",
+		"@parcel/transformer-posthtml": "^2.8.3",
 		"@parcel/transformer-sass": "^2.8.1",
 		"@types/lodash": "^4.14.186",
 		"@types/node": "^18.11.18",
 		"@types/react": "^18.0.23",
 		"@types/react-dom": "^18.0.7",
-		"cypress": "^12.3.0",
+		"cypress": "^12.4.0",
+		"cypress-parcel-preprocessor": "^1.0.0",
 		"parcel": "^2.8.1",
 		"process": "^0.11.10"
 	},
